// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DebugHistoryMiddleware correctly handles async updates 1`] = `
{
  "0_q1": [
    {
      "change": "Postponed",
      "dispatchedUpdate": {
        "type": "Promise",
        "value": Promise {
          Symbol(__quark_internal_is_promise_canceled__): true,
        },
      },
      "initialState": {
        "type": "Value",
        "value": "FOO",
      },
      "source": "Sync-Dispatch",
      "stackTrace": undefined,
      "stateAfterUpdate": "FOO",
      "time": 1600000000100,
    },
    {
      "change": "Postponed",
      "dispatchedUpdate": {
        "type": "Generator",
        "value": [Function],
      },
      "initialState": {
        "type": "Value",
        "value": "FOO",
      },
      "source": "Sync-Dispatch",
      "stackTrace": undefined,
      "stateAfterUpdate": "FOO",
      "time": 1600000000200,
    },
    {
      "change": "Postponed",
      "dispatchedUpdate": {
        "type": "Promise",
        "value": Promise {
          Symbol(__quark_internal_is_promise_canceled__): false,
        },
      },
      "initialState": {
        "type": "Value",
        "value": "FOO",
      },
      "source": "Sync-Dispatch",
      "stackTrace": undefined,
      "stateAfterUpdate": "FOO",
      "time": 1600000000300,
    },
    {
      "change": "Immediate",
      "dispatchedUpdate": {
        "type": "Value",
        "value": "BAR",
      },
      "initialState": {
        "type": "Value",
        "value": "FOO",
      },
      "isCanceled": true,
      "source": "Async-Dispatch",
      "stackTrace": undefined,
      "stateAfterUpdate": "BAR",
      "time": 1600000000400,
    },
    {
      "change": "Immediate",
      "dispatchedUpdate": {
        "type": "Value",
        "value": "BAZ",
      },
      "initialState": {
        "type": "Value",
        "value": "FOO",
      },
      "source": "Async-Dispatch",
      "stackTrace": undefined,
      "stateAfterUpdate": "BAZ",
      "time": 1600000000500,
    },
  ],
}
`;

exports[`DebugHistoryMiddleware correctly saves updates to the history tracker 1`] = `
{
  "0_q1": [
    {
      "change": "Immediate",
      "dispatchedUpdate": {
        "type": "Value",
        "value": "BAR",
      },
      "initialState": {
        "type": "Value",
        "value": "FOO",
      },
      "source": "Sync-Dispatch",
      "stackTrace": undefined,
      "stateAfterUpdate": "BAR",
      "time": 1600000000100,
    },
    {
      "change": "Postponed",
      "dispatchedUpdate": {
        "type": "Generator",
        "value": [Function],
      },
      "initialState": {
        "type": "Value",
        "value": "BAR",
      },
      "source": "Sync-Dispatch",
      "stackTrace": undefined,
      "stateAfterUpdate": "BAR",
      "time": 1600000000200,
    },
    {
      "change": "Immediate",
      "dispatchedUpdate": {
        "type": "Value",
        "value": "BAZ",
      },
      "initialState": {
        "type": "Value",
        "value": "BAR",
      },
      "source": "Sync-Dispatch",
      "stackTrace": undefined,
      "stateAfterUpdate": "BAZ",
      "time": 1600000000300,
    },
  ],
}
`;
